# jupyterlab_nodeeditor

./: .eslintignore  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json  webpack.config.js
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: build.yml
examples/: 2_tutorial_component.ipynb  3_tutorial_connections.ipynb  autogenerate.ipynb  autogenerate_sidebar.ipynb  automated_modelvis.ipynb  data_models.ipynb  demo_yaml_trans.ipynb  example_controls.ipynb  example_jlne.ipynb  example_matplotlib.ipynb  example_modelvis.ipynb  example_node_editor.ipynb  example_rete.ipynb  make_an_editor.ipynb  model_example.yml  model_loader.py  modelvis.ipynb  mpl_wip.ipynb  yaml_to_editor.ipynb  ygg_support.ipynb
examples/callback/: button_viz.ipynb  callback_python.yml  playground.ipynb  timer_viz.ipynb
examples/callback/input/: input.txt
examples/callback/output/: outputB.txt  outputCallback.txt
examples/callback/src/: callback.py  callback_origin.py  callback_real_time_viz.py  callback_viz.py
examples/example_notebooks/: autogenerate.ipynb  example_jlne.ipynb  example_modelvis.ipynb  example_node_editor.ipynb  example_rete.ipynb
examples/example_notebooks/sample_test_models/: model_rotxx_test.py
examples/example_notebooks/sample_test_models/insouts/: input_reader.txt
examples/sample_models/: export_test.yml  model_reader.yml  model_reader_test.py  model_rng.yml  model_rng_test.py  model_rotxx_test.py  output_file_rng.txt  sample_1.yml  sample_2.yml
examples/sample_models/insouts/: input_reader.txt  output_reader.txt  output_rotxx.txt
examples/sample_test_models/: model_reader.yml  model_rng.yml  model_rng_test.py  model_rotxx_test.py  model_trifecta.yml  photosynthesis.yml  trifecta_output.txt
examples/sample_test_models/insouts/: input_rotxx.txt  photosynthesis_rate.txt
examples/threejs/: editor_threejs.ipynb
examples/threejs/files/: fullSoy_2-12a.ply
examples/tutorial/: 1_tutorial_interface.ipynb  2_tutorial_component.ipynb  3_tutorial_connections.ipynb  4_tutorial_function(dev purpose).ipynb
examples/wip_notebooks/: example_modelvis.ipynb  widgets-from-runner.ipynb  ygg_support.ipynb
examples/wip_notebooks/yggdrasil_test_models/: model_reader.yml  model_reader_test.py  model_rng_test.py  trifecta_output.txt
examples/yggdrasil/: Untitled.ipynb  default_file_experiment.ipynb  demo_yaml_trans.ipynb  download_files.sh  export_test.yml  jlne_ygg_export.yml  yggdrasil_example.ipynb  yggdrasil_to_editor.py
examples/yggdrasil/input/: height.txt
examples/yggdrasil/models/: co2.py  export_test.yml
examples/yggdrasil/output/: canopy_structure.txt  growth_rate.txt  light_intensity.txt  photosynthesis_rate.txt
examples/yggdrasil/yamls/: canopy.yml  co2.yml  export_test.yml  growth.yml  light.yml  photosynthesis.yml
examples/yggdrasil_test_models/: model_reader_test.py  model_rng.yml  model_rng_test.py  model_rotxx.yml  model_rotxx_test.py
examples/yggdrasil_test_models/insouts/: input_reader.txt
jupyter-config/: jupyterlab_nodeeditor.json
jupyterlab_nodeeditor/: __init__.py  backup_framework.py  handlers.py  jlne_show_instance.ipynb  model_loader.py  mpl_beta.ipynb  mpl_wip.ipynb  node_editor.py  note_editor.py  test.py  test_sample.py  test_yamltrans.py  tester_notebook.ipynb  yaml_editor_yaml.ipynb  ygg_support.ipynb  yggdrasil_support.py  yggdrasil_tester.py  yggdrasil_to_editor.py
jupyterlab_nodeeditor/models_to_parse/: photosynthesis.yml  sample_1.yml
jupyterlab_nodeeditor/sample_models/: export_test.yml  sample_1.yml  sample_3.yml
jupyterlab_nodeeditor/threejs/: editor_threejs.ipynb  export.html
sample_models/: sample_1.yml  sample_3.yml
src/: component.vue  controls.ts  index.ts  plugin.ts  version.ts  widget.ts  widgetexports.ts
src/localtypes/rete-auto-arrange-plugin/: index.d.ts
src/localtypes/rete-context-menu-plugin/: index.d.ts
src/localtypes/rete-react-render-plugin/: index.d.ts
src/localtypes/rete-vue-render-plugin/: index.d.ts
style/: base.css
