[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"
[tool.black]
line-length = 88
target-version = [
  'py36',
  'py37',
  'py38',
]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab_nodeeditor/labextension/static/style.js"]
ensured-targets = ["jupyterlab_nodeeditor/labextension/static/style.js", "jupyterlab_nodeeditor/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyterlab_nodeeditor/labextension/**", "yarn.lock", ".*", "package-lock.json"]
