[options]
packages = find:
install_requires =
    jupyter_server>=1.6,<2
    jupyterlab~=3.1
    ipywidgets>=7.6.1
    traitlets>=5.0.5
python_requires = >3.7,<3.12

[flake8]
max-line-length = 88
exclude = doc,
    benchmarks,
    */api.py,
    */__init__.py,
    */__config__.py,
    yt/units,
    yt/frontends/stream/sample_data,
    yt/visualization/_mpl_imports.py,
    yt/utilities/fits_image.py,
    yt/utilities/lodgeit.py,
    yt/mods.py,
    yt/visualization/_colormap_data.py,
ignore = E203,
    E266,
    E302,
    E501,
    E741,
    W503,
enable-extensions = G
jobs = 8
